# Add the IPlatform target.
CPF_IDL_GENERATOR(
	REQUIRED
	PACKAGE_INTERFACES
	TARGET
		IPlatform
	BASE
		ICPF
	DEPENDENCIES
		ICore
	OUTPUT_ROOT
		${CPF_GENERATED}
	OUTPUT_BASE
		CPF/Platform
	IDE_FOLDER
		Plugins/Interface/Core
	IDL_ROOT
		${CMAKE_CURRENT_SOURCE_DIR}/IDL
	FILES
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/iConcurrency.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/iDesktop.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iFence.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iLoadBalancer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iScheduler.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iThreadPool.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iThreadTimes.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/iWorkBuffer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/ThreadTimeInfo.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Concurrency/WorkContext.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iClipboard.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iEventLoop.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iInputDevice.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iInputManager.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iJoystickDevice.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iKeyboardDevice.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iMouseDevice.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/iWindow.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/KeyModifier.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/MouseButton.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/OSWindowData.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/ScanCode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/WindowDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Desktop/WindowFlags.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iAdapter.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iBlob.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iCommandPool.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iCommandBuffer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iConstantBuffer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iDevice.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iFence.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iFrameBuffer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iImage.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iImageView.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iIndexBuffer.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iInstance.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iOutput.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iPipeline.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iRenderPass.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iResource.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iResourceBinding.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iSampler.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iShader.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iSwapChain.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/iVertexBuffer.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/AttachmentRef.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ClearValue.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/Range.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/Ratio.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceData.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/Viewport.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/WindowData.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/AttachmentDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/BlendStateDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/DepthStencilStateDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/DependencyDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/DepthStencilViewDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/FrameBufferDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ImageDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ImageViewDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/InputElementDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/InputLayoutDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ModeDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/OutputDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ParamBindingDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/PipelineStateDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/RasterizerStateDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/RenderPassBeginDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/RenderPassDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/RenderTargetBlendStateDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceBindingDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SampleDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SamplerDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SubPassDesc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SwapChainDesc.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/BindingType.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/BlendFunc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/BlendOp.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ComparisonFunc.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ConservativeRasterization.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/CullMode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/DepthStencilClearFlag.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/DepthWriteMask.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/EnumMode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/FillMode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/FilterMode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/Format.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/HeapType.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ImageFlags.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/IndexStripCut.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/InputClassification.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/LoadOp.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/LogicOp.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ModeRotation.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ModeScaling.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ParamFlags.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ParamVisibility.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/PipelineBindPoint.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/PrimitiveTopology.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceState.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceType.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ResourceUsage.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ScanlineOrder.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/ShaderType.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/StencilOp.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/StoreOp.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SubResource.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/SwapEffect.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/TopologyType.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/WindingOrder.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/WrapMode.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/Graphics/WriteMask.idl

		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iCache.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iConfiguration.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iLoader.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iLocator.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iMonitor.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iResource.idl
		${CMAKE_CURRENT_SOURCE_DIR}/IDL/ResourceSystem/iVolume.idl

	HPP_ROOT
		${CMAKE_CURRENT_SOURCE_DIR}/Include
	HPP_OUTPUT_BASE
		CPF/Platform
	COPY_HPP
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/BlendStateBuilder.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/DepthStencilBuilder.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/InputLayoutBuilder.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/PipelineStateBuilder.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/RasterizerStateBuilder.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/Utilities.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Include/Graphics/FormatSize.hpp
)

add_subdirectory (Examples)
add_subdirectory (KPI)
